[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Romain Grente", email = "romain.grente@gmail.com"},
]
license-expression = "MIT"
dependencies = [
    "fastapi>=0.75.0",
    "uvicorn[standard]>=0.17.6",
]
requires-python = ">=3.8"

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
